...

    const [startDateSet, setStartDateSet] = useState(false);
    const [targetType, setTargetType] = useState(fromLeague === true ? "league" : "self")

    const switchOptions = [
        {label: 'Self', value: 'self'},
        {label: 'Friends', value: 'friend'},
        {label: 'League', value: 'league'}
    ];

    const friendInfo = [];
    const leagueInfo: ((prevState: never[]) => never[]) | { label: any; value: any; }[] = [];

    const [openFriends, setOpenFriends] = useState(false);
...
        getFriends()
        getLeagues()

    }, [])

    useEffect(() => {
        if(value === 'Enter your own') {
            setCustomTextEditable(true);
        } else {
            setCustomTextEditable(false);
            setCustomActivity("");
        }
    }, [value])
...
                <DropDownPicker
                    setValue={setValue}
                    value={value}
                    items={items}
                    open={open}
                    setOpen={setOpen}
                    placeholder={'Choose an activity'}
                >
                </DropDownPicker>
            </View>

            {customTextEditable &&
                <View style={styles.CustomChalContainer}>
...
                            placeholder={"Enter custom activity"}
                            placeholderTextColor={validCustomActivity ? 'grey' : '#C65656'}
                            style = {validCustomActivity ? [styles.validInput , {height : '100%'}] : [styles.invalidInput, {height : '100%'}]}
                            editable={customTextEditable}
                            value={customActivity}
                            onChangeText={handleCustomActivityChange}
                            testID = "enter own"
                        >
                        </TextInput>
                    </View>
                </View>

            }
...
                        <DropDownPicker
                            setValue={setValueUnits}
                            value={valueUnits}
                            items={itemsUnits}
                            open={openUnits}
                            setOpen={setOpenUnits}
                            placeholder={'Units'}
                        >
                        </DropDownPicker>

                    </View>

                </View>
...
                    <DropDownPicker
                        setValue={setValueFriends}
                        value={valueFriends}
                        items={itemsFriends}
                        open={openFriends}
                        setOpen={setOpenFriends}
                        placeholder={'Choose friend'}
                    >
                    </DropDownPicker>
                </View>
              </View>
            }

...
                      <DropDownPicker
                          setValue={setValueLeagues}
                          value={valueLeagues}
                          items={itemsLeagues}
                          open={openLeagues}
                          setOpen={setOpenLeagues}
                          placeholder={'Choose a league'}
                      >
                      </DropDownPicker>
                  </View>
                </View>
            }
            <View style = {styles.SubmitContainer}>
...
                    style={validInfo() ? styles.EnterButtonValid : styles.EnterButtonInvalid}
                    onPress={handleIssuePress}
                    disabled={!validInfo()}
                    underlayColor = '#013319'
                >
                  <Text style={styles.IssueChallengeText} testID={validInfo() ? "Valid Send" : "Invalid Send"}>
                        Send
                    </Text>
                </TouchableHighlight>
            </View>
      </View>
    )
}
...
