const unitList = [
    {label: 'minute (min)', value: 'min'},
    {label: 'hour (hr)', value: 'hr'},
    {label: 'meter (m)', value: 'm'},
    {label: 'kilometer (km)', value: 'km'},
    {label: 'feet (ft)', value: 'ft'},
    {label: 'yard (yd)', value: 'yd'},
    {label: 'mile (mi)', value: 'mi'},
    {label: 'count (ct)', value: 'ct'},
]


export default unitList;